z-index fixes + background

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,8 @@ body {
 /* Sidebar */
 
 .sidebar {
+    background: white;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     padding: 25px 25px 0px 25px;
